<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aùn no te has registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">Confirmar registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>

    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointments">Reservar cita</string>
    <string name="btn_my_appointments">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripción</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">"Cita médica #%1$d"</string>
    <string name="item_appointment_date">"Atención el día %1$s"</string>
    <string name="item_appointment_time">"A las %1$s"</string>
    <string name="label_my_appointments">Mis citas médicas</string>
    <string name="press_back_again">Presione una vez más para salir</string>
    <string name="dialog_create_appointment_exit_title">¿Estás seguro que deseas salir?</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro, los datos que habias ingresado se perderán</string>
    <string name="dialog_create_appointment_exit_positive_btn">Si, salir</string>
    <string name="dialog_create_appointment_exit_negative_btn">Continuar registro</string>
    <string name="validate_create_appointment_description">La descripción es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita médica</string>
    <string name="label_confirm_appointment_data">Datos de la cita</string>
    <string name="validate_appointment_date">Es necesario ingresar una fecha</string>
    <string name="validate_appointment_time">Es necesario definir la hora para la cita</string>
</resources>