<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:background="@drawable/bg_gradient"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/label_register"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/label_name" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/label_email" />

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:text="@string/label_password" />

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/btn_register" />

        <TextView
            android:id="@+id/tvGoToLogin"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/label_go_to_login" />
    </LinearLayout>
</LinearLayout>